# rwa-insurance

./: .gitignore  LICENSE  README.md  WHITEPAPER.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.json  railway.yml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  assets.py  auth.py  chat.py  claims.py  dashboard.py  policies.py  risk.py
backend/app/ml/: __init__.py
backend/app/models/: assets.py  chat_session.py  claim.py  init.py  policy.py  risk_assessment.py  user.py
backend/app/schemas/: asset.py  chat.py  claim.py  policy.py  risk.py  user.py
backend/app/services/: asset_service.py  auth_service.py  chatbot_service.py  claim_service.py  policy_service.py  risk_service.py
backend/app/utils/: constants.py  helpers.py  init.py  security.py
backend/data/: vehicle_crime_training_data.csv
backend/data/models/: premium_model.pkl
backend/data/nft_metadata/: nft_metadata_1.json  nft_metadata_2.json  nft_metadata_3.json  nft_metadata_4.json  nft_metadata_5.json
backend/data/processed/: insuregenie_lightgbm_model.txt  insuregenie_model_components.pkl  insuregenie_model_info.json  insuregenie_neural_network.h5  insuregenie_visualizations.py
backend/data/raw/: chatbot_training_data.csv  london_vehicle_crimes_sample.csv  onchain_vehicles_blockdag.csv
backend/migrations/: env.py
backend/migrations/versions/: 4f1c50fa1197_initial_migration.py
backend/scripts/: init_db.py  load_data.py  train_models.py
(+118 files in other folders)
